--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
+    "react-simple-typewriter": "^3.0.1",
     "sass": "^1.50.0"
   },
   "devDependencies": {
