--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
     "react-simple-typewriter": "^3.0.1",
-    "sass": "^1.50.0"
+    "sass": "^1.50.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.12.0",
