--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "emailjs": "^3.8.1",
+    "emailjs-com": "^3.2.0",
+    "leaflet": "^1.8.0",
     "next": "12.1.4",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
+    "react-leaflet": "^3.2.5",
     "react-simple-typewriter": "^3.0.1",
     "sass": "^1.50.0",
     "styled-components": "^5.3.5"
